Feature: add user controller, user service, user mapper
