# src/main/java/com/example/bankcards/dto/CreateUserDto.java
@@ -1,0 +1,11 @@
+package com.example.bankcards.dto;
+
+import lombok.Data;
+
+@Data
+public class CreateUserDto {
+    private Long id;
+    private String username;
+    private String password;
+    private String role;
+}
