# src/main/java/com/example/bankcards/dto/UserDto.java
@@ -1,0 +1,10 @@
+package com.example.bankcards.dto;
+
+import lombok.Data;
+
+@Data
+public class UserDto {
+    private Long id;
+    private String username;
+    private String role;
+}
